--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -25,8 +25,10 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
+    "ionic2-calendar": "^0.6.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "url": "^0.11.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -41,6 +43,7 @@
     "@angular/language-service": "~13.2.2",
     "@capacitor/cli": "3.5.1",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@ionic/lab": "3.2.11",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
